[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "MacSyFinder"
authors = [
    {name="Sophie Abby", email='sophie.abby@univ-grenoble-alpes.fr'},
    {name="Bertrand Neron", email='bneron@pasteur.fr'}
    ]
maintainers = [
    {name="Bertrand Neron", email='bneron@pasteur.fr'}
    ]
description = 'MacSyFinder: Detection of macromolecular systems in protein datasets using systems modelling and similarity search'
readme = "README.md"
license = {file="COPYING"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

requires-python = ">=3.10"

dependencies = [
  "colorlog>=4.0.2",
  "PyYAML>=5.1.1",
  "packaging>=18.0",
  "networkx>=2.4",
  "pandas>=1.03",
  "colorama>=0.4.4",
  "certifi",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-svg2pdfconverter",
    "coverage",
    "build",
    "ruff",
    "GitPython",
    "pre-commit",
]

model = [
    "GitPython"
]

[project.scripts]
macsyfinder = "macsypy.scripts.macsyfinder:main"
macsydata = "macsypy.scripts.macsydata:main"
macsyprofile = "macsypy.scripts.macsyprofile:main"
macsyconfig = "macsypy.scripts.macsyconfig:main"
macsysplit = "macsypy.scripts.macsy_gembase_split:main"
macsymerge = "macsypy.scripts.macsy_merge_results:main"


[project.urls]
Homepage = "https://github.com/gem-pasteur/macsyfinder/"
Documentation = "https://macsyfinder.readthedocs.io/en/latest/"
Repository = "https://github.com/gem-pasteur/macsyfinder/"
Issues = "https://github.com/gem-pasteur/macsyfinder/issues"
Changelog = "https://macsyfinder.readthedocs.io/en/latest/user_guide/new_v2.html#what-s-new-in-macsyfinder-v2"

[tool.setuptools.packages.find]
include = ["macsypy*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "macsypy.__version__"}

[tool.coverage.run]
branch = true
source = ["macsypy"]
command_line = "-m unittest discover -vv"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

src = ['macsypy', 'tests']
[tool.ruff.format]
indent-style = "space"


[tool.ruff.lint.per-file-ignores]

#F841 Local variable `xxx` is assigned to but never used
"tests/test_System.py" = ["F841"]

