[metadata]
version= attr: macsypy.__version__
name = MacSyFinder
author = Sophie Abby, Bertrand Neron
author_email = sophie.abby@univ-grenoble-alpes.fr, bneron@pasteur.fr
description = MacSyFinder: Detection of macromolecular systems in protein datasets using systems modelling and similarity search
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/gem-pasteur/macsyfinder/
project_urls =
    Bug Tracker =  https://github.com/gem-pasteur/macsyfinder/issues
    Documentation = https://macsyfinder.readthedocs.io/en/latest/
license = GPLv3
license_files = COPYING
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
python_requires = >=3.10
install_requires =
    colorlog >= 4.0.2
    PyYAML >= 5.1.1
    packaging >= 18.0
    networkx >= 2.4
    pandas >= 1.03
    colorama >= 0.4.4
    certifi

packages = find:

[options.packages.find]
exclude =
	build
	tests

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    sphinxcontrib-svg2pdfconverter
    coverage
    build
    ruff
    GitPython
    pre-commit

model =
    GitPython

[options.entry_points]
console_scripts =
    macsyfinder=macsypy.scripts.macsyfinder:main
    macsydata=macsypy.scripts.macsydata:main
    macsyprofile=macsypy.scripts.macsyprofile:main
    macsyconfig=macsypy.scripts.macsyconfig:main
    macsysplit=macsypy.scripts.macsy_gembase_split:main
    macsymerge=macsypy.scripts.macsy_merge_results:main

[sdist]
formats = gztar

[coverage:run]
source = macsypy
omit =
    tests/*
    setup.py
branch = True

# to exclude some lines and/or functions from coverage, add a comment
# '# pragma: no cover' in the line to exclude from coverage report
# (or first line of a function, loop etc. to exclude all function/loop)

[coverage:html]
directory = coverage_html

# run tests: coverage run --source=macsypy tests/run_tests.py -vv
# coverage html
